--- a/cfd-analysis.html
+++ b/cfd-analysis.html
@@ -129,6 +129,7 @@
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="services.html">services</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">CFD Analysis</li>
                               </ol>
                             </nav>
@@ -189,28 +190,25 @@
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
                                                     <br>
-                                                    <h1 class="mar_top">FEED Design</h1>
+                                                    <h1 class="mar_top">CFD Analysis</h1>
                                                     <br>
                                                     <br>
-                                                    <b>FEED, Front-End Engineering Design, is a crucial engineering approach that works on the conceptual design of the project to provide a firm foundation for detailed design, procurement, construction, and commissioning. It mainly focuses on defining and documentation of the following aspects of the project</b>
+                                                    <b>Computational Fluid Dynamics (CFD), a powerful tool used to simulate fluid flow, heat transfer, and related phenomena. It employs numerical methods and algorithms to solve complex equations governing fluid behavior.</b>
                                                     <br>
                                                     <br>
+                                                    <h3>What we offer?</h3>
+                                                    <p>We offer a comprehensive range of solutions tailored to meet the specific needs of our clients:</p>
                                                     <ol>
-                                                        <li>Technical and commercial scope</li>
-                                                        <li>Design basis</li>
-                                                        <li>Budget estimation</li>
-                                                        <li>Potential risks</li>
-                                                        <li>Scheduling and project timeline</li>
+                                                        <li>Comprehensive CFD Analyses: In-depth simulations covering fluid dynamics, heat transfer, turbulence, and more.</li>
+                                                        <li>Advanced Technology: We utilize cutting-edge software and tools to ensure accurate and reliable results.</li>
+                                                        <li>Cost-effective Solutions: Optimizing performance and efficiency while minimizing operational costs.</li>
+                                                        <li>Continuous Support: Post-analysis support and consultation to assist with implementation and optimization.</li>
                                                     </ol>
                                                     <h3>Why Us?</h3>
-                                                    <b>We offer complete FEED analysis which comprises of following sections:</b>
                                                     <ol>
-                                                        <li>Process Flow Diagrams (PFDs)</li>
-                                                        <li>P&IDs</li>
-                                                        <li>Electric Diagrams</li>
-                                                        <li>Design Reports</li>
-                                                        <li>Civil and Structural Design and Layout</li>
-                                                        <li>Piping/Machine Design</li>
+                                                        <li>Expert Team: Our skilled professionals possess the expertise to tackle complex CFD challenges effectively.</li>
+                                                        <li>Tailored Approach: Solutions tailored to the unique requirements and objectives of each client.</li>
+                                                        <li>Reliability: Utilization of advanced tools and methodologies for accurate and dependable results.</li>
                                                     </ol>
                                                 </div>
                                             </div>
