--- a/cost-estimation.html
+++ b/cost-estimation.html
@@ -129,6 +129,7 @@
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="services.html">services</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Cost Estimation</li>
                               </ol>
                             </nav>
@@ -188,27 +189,25 @@
                                                    
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
-                                                    <h1 class="mar_top">FEED Design</h1>
                                                     <br>
-                                                    <b>FEED, Front-End Engineering Design, is a crucial engineering approach that works on the conceptual design of the project to provide a firm foundation for detailed design, procurement, construction, and commissioning. It mainly focuses on defining and documentation of the following aspects of the project</b>
+                                                    <h1 class="mar_top">Cost Estimation</h1>
                                                     <br>
                                                     <br>
+                                                    <b>Cost estimation covers a broad range of segments of a plant starting from small consumable items such as fittings, instrumentations, piping networks to large scale reactors, columns and various unit operations’ plants.</b>
+                                                    <br>
+                                                    <br>
+                                                    <h3>What we offer?</h3>
+                                                    <p>We offer a comprehensive range of solutions tailored to meet the specific needs of our clients:</p>
                                                     <ol>
-                                                        <li>Technical and commercial scope</li>
-                                                        <li>Design basis</li>
-                                                        <li>Budget estimation</li>
-                                                        <li>Potential risks</li>
-                                                        <li>Scheduling and project timeline</li>
+                                                        <li>Comprehensive cost analysis from single unit to full plant using advanced tools like Aspen Capital Cost Estimator (ACCE).</li>
+                                                        <li>Advanced Technology: We utilize cutting-edge software and tools to ensure accurate and reliable results.</li>
+                                                        <li>Our platform provides detailed cost insights, aiding informed decision-making in project planning and implementation processes.</li>
                                                     </ol>
                                                     <h3>Why Us?</h3>
-                                                    <b>We offer complete FEED analysis which comprises of following sections:</b>
                                                     <ol>
-                                                        <li>Process Flow Diagrams (PFDs)</li>
-                                                        <li>P&IDs</li>
-                                                        <li>Electric Diagrams</li>
-                                                        <li>Design Reports</li>
-                                                        <li>Civil and Structural Design and Layout</li>
-                                                        <li>Piping/Machine Design</li>
+                                                        <li>Platform provides comprehensive cost analysis from unit to full plant using advanced tools like Aspen Capital Cost Estimator (ACCE).</li>
+                                                        <li>Utilizes powerful cost estimation tools including Aspen In-Plant Cost Estimator, with location-based real-time updated costing database.</li>
+                                                        <li>Adheres to ASME and ANSI standards for equipment costing, ensuring reliability and credibility of cost estimation reports.</li>
                                                     </ol>
                                                 </div>
                                             </div>
