--- a/heat-and-mass-transfer-analysis.html
+++ b/heat-and-mass-transfer-analysis.html
@@ -129,6 +129,7 @@
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="services.html">services</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Heat & Mass Transfer Analysis</li>
                               </ol>
                             </nav>
@@ -188,27 +189,28 @@
                                                    
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
-                                                    <h1 class="mar_top">FEED Design</h1>
                                                     <br>
-                                                    <b>FEED, Front-End Engineering Design, is a crucial engineering approach that works on the conceptual design of the project to provide a firm foundation for detailed design, procurement, construction, and commissioning. It mainly focuses on defining and documentation of the following aspects of the project</b>
+                                                    <h1 class="mar_top">Heat and Mass Transfer Analysis</h1>
                                                     <br>
                                                     <br>
+                                                    <b>Heat and Mass Transfer analysis involves studying the movement of heat and mass within a system or between systems. It encompasses various phenomena such as conduction, convection, radiation, and diffusion, which are crucial in understanding and optimizing processes across industries</b>
+                                                    <br>
+                                                    <br>
+                                                    <h3>What we offer?</h3>
+                                                    <p>We offer a comprehensive range of solutions tailored to meet the specific needs of our clients:</p>
                                                     <ol>
-                                                        <li>Technical and commercial scope</li>
-                                                        <li>Design basis</li>
-                                                        <li>Budget estimation</li>
-                                                        <li>Potential risks</li>
-                                                        <li>Scheduling and project timeline</li>
+                                                        <li>Comprehensive Analysis: Detailed simulations to analyze heat and mass transfer phenomena in various applications and environments.</li>
+                                                        <li>Multi-disciplinary Approach: Integration of heat transfer, fluid dynamics, and thermodynamics principles to provide holistic solutions.</li>
+                                                        <li>Cost-effective Solutions: Optimization of processes to improve efficiency and reduce operational costs.</li>
+                                                        <li>Quality Assurance: Rigorous quality checks and validation procedures to uphold the integrity and accuracy of our analyses.</li>
+                                                        <li>Client Collaboration: Engaging clients throughout the analysis process to incorporate feedback and ensure alignment with project goals.</li>
                                                     </ol>
                                                     <h3>Why Us?</h3>
-                                                    <b>We offer complete FEED analysis which comprises of following sections:</b>
                                                     <ol>
-                                                        <li>Process Flow Diagrams (PFDs)</li>
-                                                        <li>P&IDs</li>
-                                                        <li>Electric Diagrams</li>
-                                                        <li>Design Reports</li>
-                                                        <li>Civil and Structural Design and Layout</li>
-                                                        <li>Piping/Machine Design</li>
+                                                        <li>Expert Team: Our team comprises skilled professionals with in-depth expertise in Heat and Mass Transfer analysis.</li>
+                                                        <li>Tailored Solutions: We understand that every project is unique, and we tailor our solutions to meet specific client needs and objectives.</li>
+                                                        <li>Innovation: We continuously explore new technologies and methodologies to stay at the forefront of Heat and Mass Transfer analysis, enabling us to provide innovative solutions to our clients' challenges.</li>
+                                                        <li>Client-focused Approach: Client satisfaction is our priority, and we strive to exceed expectations by delivering high-quality services and maintaining open communication.</li>
                                                     </ol>
                                                 </div>
                                             </div>
