--- a/layout-design.html
+++ b/layout-design.html
@@ -129,6 +129,7 @@
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="services.html">services</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Layout Design</li>
                               </ol>
                             </nav>
@@ -188,27 +189,36 @@
                                                    
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
-                                                    <h1 class="mar_top">FEED Design</h1>
                                                     <br>
-                                                    <b>FEED, Front-End Engineering Design, is a crucial engineering approach that works on the conceptual design of the project to provide a firm foundation for detailed design, procurement, construction, and commissioning. It mainly focuses on defining and documentation of the following aspects of the project</b>
+                                                    <h1 class="mar_top">Layout Design (2D, 3D models)</h1>
                                                     <br>
                                                     <br>
+                                                    <b>We provide detailed 2D and 3D design models of process plants, piping networks, and equipment. We specialize in making use of various tools such as AutoCAD Plant 3D, SolidWorks, and Catia. Plant layout design utilizes 2D and 3D techniques, each with unique advantages. Combining both methods creates comprehensive, effective designs.</b>
+                                                    <br>
+                                                    <br>
+                                                    <p>Plant layout typically involves:</p>
                                                     <ol>
-                                                        <li>Technical and commercial scope</li>
-                                                        <li>Design basis</li>
-                                                        <li>Budget estimation</li>
-                                                        <li>Potential risks</li>
-                                                        <li>Scheduling and project timeline</li>
+                                                        <li>Space Utilization</li>
+                                                        <li>Workflow Optimization</li>
+                                                        <li>Safety Considerations</li>
+                                                        <li>Ergonomics</li>
+                                                        <li>Future Expansion</li>
+                                                        <li>Space Utilization</li>
+                                                        <li>Communication and Accessibility</li>
+                                                        <li>Cost Optimization</li>
                                                     </ol>
-                                                    <h3>Why Us?</h3>
-                                                    <b>We offer complete FEED analysis which comprises of following sections:</b>
+                                                    <h3>What we offer?</h3>
                                                     <ol>
-                                                        <li>Process Flow Diagrams (PFDs)</li>
-                                                        <li>P&IDs</li>
-                                                        <li>Electric Diagrams</li>
-                                                        <li>Design Reports</li>
-                                                        <li>Civil and Structural Design and Layout</li>
-                                                        <li>Piping/Machine Design</li>
+                                                        <li>We aid EPCs, plant owners, suppliers, and consultants to speed up projects and overcome design challenges.</li>
+                                                        <li>We prioritize project delivery efficiency, minimizing design-related setbacks.</li>
+                                                        <li>We strive to accelerate project implementation with minimal risk, ensuring optimal outcomes for stakeholders.</li>
+                                                    </ol>
+                                                    
+                                                    <h3>Why Us?</h3>
+                                                    <ol>
+                                                        <li>Extensive expertise crafting tailored digital design data for intricate plant design needs, honed over many years.</li>
+                                                        <li>Expertise in piping, process, structural, and mechanical engineering enables meticulous plant layout design, ensuring seamless integration and efficient functionality.</li>
+                                                        <li>Tailored plant design meets client needs, optimizing performance, enhancing safety, and providing cost-effective solutions.</li>
                                                     </ol>
                                                 </div>
                                             </div>
