--- a/pid.html
+++ b/pid.html
@@ -129,6 +129,7 @@
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="services.html">services</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">pid</li>
                               </ol>
                             </nav>
@@ -189,28 +190,24 @@
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
                                                     <br>
-                                                    <h1 class="mar_top">FEED Design</h1>
+                                                    <h1 class="mar_top">P&ID</h1>
                                                     <br>
                                                     <br>
-                                                    <b>FEED, Front-End Engineering Design, is a crucial engineering approach that works on the conceptual design of the project to provide a firm foundation for detailed design, procurement, construction, and commissioning. It mainly focuses on defining and documentation of the following aspects of the project</b>
+                                                    <b>Our Piping and Instrumentation Diagram (P&ID) services provide detailed representations of process flows and instrumentation in industrial plants.</b>
                                                     <br>
                                                     <br>
+                                                    <h3>What we offer?</h3>
+                                                    <p>We offer a comprehensive range of solutions tailored to meet the specific needs of our clients:</p>
                                                     <ol>
-                                                        <li>Technical and commercial scope</li>
-                                                        <li>Design basis</li>
-                                                        <li>Budget estimation</li>
-                                                        <li>Potential risks</li>
-                                                        <li>Scheduling and project timeline</li>
+                                                        <li>Detailed diagrams aid in design, maintenance, and troubleshooting</li>
+                                                        <li>We offer expertise in creating, revising, and interpreting P&IDs</li>
+                                                        <li>Precise diagrams minimize errors and enhance safety</li>
                                                     </ol>
                                                     <h3>Why Us?</h3>
-                                                    <b>We offer complete FEED analysis which comprises of following sections:</b>
                                                     <ol>
-                                                        <li>Process Flow Diagrams (PFDs)</li>
-                                                        <li>P&IDs</li>
-                                                        <li>Electric Diagrams</li>
-                                                        <li>Design Reports</li>
-                                                        <li>Civil and Structural Design and Layout</li>
-                                                        <li>Piping/Machine Design</li>
+                                                        <li>Our team ensures compliance with industry standards and regulations</li>
+                                                        <li>We prioritize client specifications and project requirements</li>
+                                                        <li>We provide ongoing support and revisions as needed.</li>
                                                     </ol>
                                                 </div>
                                             </div>
