--- a/project-feasibility.html
+++ b/project-feasibility.html
@@ -116,7 +116,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>Project Feasibility</h1>
+                            <h1>Finite Element Analysis (FEA)</h1>
                         </div>
                     </div>  
                 </div>  
@@ -129,6 +129,7 @@
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="services.html">services</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">FEA</li>
                               </ol>
                             </nav>
@@ -188,27 +189,33 @@
                                                    
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
-                                                    <h1 class="mar_top">FEED Design</h1>
+                                                    <h1 class="mar_top">Finite Element Analysis (FEA)</h1>
                                                     <br>
-                                                    <b>FEED, Front-End Engineering Design, is a crucial engineering approach that works on the conceptual design of the project to provide a firm foundation for detailed design, procurement, construction, and commissioning. It mainly focuses on defining and documentation of the following aspects of the project</b>
+                                                    <b>We use Finite Element Analysis (FEA) is a computational technique to simulate and analyze the behavior of structures and systems under various conditions.</b>
                                                     <br>
                                                     <br>
+                                                    <p>Our FEA services analyze the following:</p>
                                                     <ol>
-                                                        <li>Technical and commercial scope</li>
-                                                        <li>Design basis</li>
-                                                        <li>Budget estimation</li>
-                                                        <li>Potential risks</li>
-                                                        <li>Scheduling and project timeline</li>
+                                                        <li>Stress, Strain & Deformation</li>
+                                                        <li>Fatigue Analysis</li>
+                                                        <li>Contact Analysis</li>
+                                                        <li>Seismic Analysis</li>
+                                                        <li>Modal Analysis</li>
+                                                    </ol>
+                                                    <h3>What we offer?</h3>
+                                                    <p>We offer a comprehensive range of solutions tailored to meet the specific needs of our clients:</p>
+                                                    <ol>
+                                                        <li>Consultation and Project Scoping</li>
+                                                        <li>Finite Element Modeling, Simulation and Analysis</li>
+                                                        <li>Result Interpretation and Analysis</li>
+                                                        <li>Optimization and Design Iteration</li>
+                                                        <li>Validation, Verification and Customized Solutions</li>
                                                     </ol>
                                                     <h3>Why Us?</h3>
-                                                    <b>We offer complete FEED analysis which comprises of following sections:</b>
                                                     <ol>
-                                                        <li>Process Flow Diagrams (PFDs)</li>
-                                                        <li>P&IDs</li>
-                                                        <li>Electric Diagrams</li>
-                                                        <li>Design Reports</li>
-                                                        <li>Civil and Structural Design and Layout</li>
-                                                        <li>Piping/Machine Design</li>
+                                                        <li>Our FEA services enable informed engineering decisions</li>
+                                                        <li>Designs are optimized for efficiency and accelerated product development</li>
+                                                        <li>Risks and costs are minimized through FEA analysis</li>
                                                     </ol>
                                                 </div>
                                             </div>
