--- a/feed-design.html
+++ b/feed-design.html
@@ -129,6 +129,7 @@
                             <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="services.html">services</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">FEED Design</li>
                               </ol>
                             </nav>
@@ -188,7 +189,9 @@
                                                    
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
+                                                    <br>
                                                     <h1 class="mar_top">FEED Design</h1>
+                                                    <br>
                                                     <br>
                                                     <b>FEED, Front-End Engineering Design, is a crucial engineering approach that works on the conceptual design of the project to provide a firm foundation for detailed design, procurement, construction, and commissioning. It mainly focuses on defining and documentation of the following aspects of the project</b>
                                                     <br>
@@ -202,6 +205,7 @@
                                                     </ol>
                                                     <h3>Why Us?</h3>
                                                     <b>We offer complete FEED analysis which comprises of following sections:</b>
+                                                    
                                                     <ol>
                                                         <li>Process Flow Diagrams (PFDs)</li>
                                                         <li>P&IDs</li>
