--- a/services.html
+++ b/services.html
@@ -96,7 +96,7 @@
                         Services
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item divider" href="feed-design.html">FEEd Design</a>
+                        <a class="dropdown-item divider" href="feed-design-and-cost-estimation.html">FEEd Design</a>
                         <a class="dropdown-item divider" href="cost-estimation.html">Cost Estimation</a>
                         <a class="dropdown-item divider" href="layout-design.html">Layout Design (2D, 3D Models)</a>
                         <a class="dropdown-item divider" href="project-feasibility.html">Finite Element Analysis (FEA)</a>
@@ -157,7 +157,7 @@
                                 <div class="capabilities_box2">
                                     <p>FEED Design</p>
                                     <p>FEED, Front-End Engineering Design, is a crucial engineering approach that works on the conceptual design of the project</p>
-                                    <a href="feed-design.html"><button type="button" class="btn btn-default read_btn">Read More</button></a>
+                                    <a href="feed-design-and-cost-estimation.html"><button type="button" class="btn btn-default read_btn">Read More</button></a>
                                 </div>
                             </div>
                             
