--- a/services.html
+++ b/services.html
@@ -155,7 +155,7 @@
                                     <img src="images/services/service/feed-design_1.png" class="img-responsive">
                                 </div>
                                 <div class="capabilities_box2">
-                                    <p>FEED Design</p>
+                                    <p>FEED Design And Cost Estimation</p>
                                     <p>FEED, Front-End Engineering Design, is a crucial engineering approach that works on the conceptual design of the project</p>
                                     <a href="feed-design-and-cost-estimation.html"><button type="button" class="btn btn-default read_btn">Read More</button></a>
                                 </div>
