--- a/cfd-analysis.html
+++ b/cfd-analysis.html
@@ -96,7 +96,7 @@
                         Services
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item divider" href="feed-design-and-cost-estimation.html">FEEd Design</a>
+                        <a class="dropdown-item divider" href="feed-design-and-cost-estimation.html">FEEd Design And Cost Estimation</a>
                         <a class="dropdown-item divider" href="cost-estimation.html">Cost Estimation</a>
                         <a class="dropdown-item divider" href="layout-design.html">Layout Design (2D, 3D Models)</a>
                         <a class="dropdown-item divider" href="project-feasibility.html">Finite Element Analysis (FEA)</a>
